<resources>
    <string name="app_name">Пинега</string>
    <string name="title_activity_main">MainActivity</string>


    <!-- меню тулбара -->
    <string name="share_app">поделиться</string>
    <string name="dev_activity">разработчик</string>


    <!-- заголовки активити -->
    <string name="dev_act">Разработчик</string>
    <string name="shopslist">выберете категорию</string>
    <string name="title_news">Новости ВК</string>
    <string name="aboutAppLabel">О приложении</string>


    <!-- заголовки фрагментов  -->
    <string name="main_fragment">ГЛАВНАЯ</string>
    <string name="news_fragment">НОВОСТИ ВК</string>
    <string name="attractions_fragment">ДОСТОПРИМЕЧАТЕЛЬНОСТИ</string>
    <string name="titleMainFrag1">Пинега</string>
    <string name="titleMainFrag2">поселок и окрестности</string>
    <string name="textDescriptionMainFrag">История, новости, достопримечательности и многое другое в этом приложении!
    </string>


    <!-- заголовки для бокового меню -->
    <string name="shops">магазины</string>
    <string name="streets">улицы</string>
    <string name="gallery">галерея</string>
    <string name="about_app">о приложении</string>


    <!-- Шторка бокового меню -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Пинега</string>
    <string name="nav_header_subtitle">Поселок и окрестности</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--  переменные для макетов -->
    <string name="read_more">подробнее</string>
    <string name="open_post">открыть оригинал поста</string>



    <!--  текст для достопримечательностей -->

    <string name="article_museum1">
  Пинежский краеведческий музей был создан в 1962 году на базе школьного музея,
  организованного школьниками во главе с учителем истории, участником Гражданской и
  Великой Отечественной войн Василием Ивановичем Стирмановым. С 1966 года музей является
  филиалом Архангельского краеведческого музея. С 1989 года музей размещается в здании,
  часть которого – квартира купца I гильдии Е. И. Володина.
    </string>

    <string name="article_museum2">
  Фонды музея насчитывают более 14 тысяч экспонатов, среди которых надгробная плита князя В. В. Голицына
  (фаворита царевны Софьи, отправленного в пинежскую ссылку Петром I). Основные выставки, наглядно показывающие
   природное и историко-культурное наследие Пинежского края: «Быт и занятия пинежских крестьян до 1917 года»,
   «Птицы и звери наших лесов», «Город Пинега – 1780–1917», «Храмы Пинежья», «Политические репрессии».
    </string>

    <string name="article_museum3">
    За год Пинежский краеведческий музей посещают почти 8 тысяч человек.
    </string>

    <string name="article_museum4">
    Сотрудники музея проводят экскурсии, музейно-образовательные занятия и лекции по темам: «История Пинеги»,
    «Заселение Пинежья», «Древнее чудское население края», «Новгородская колонизация», «Наш край в XVII–XVIII веках»,
    «Наш край на рубеже XIX–XX веках», «Гражданская война на Пинеге», «Гулаг на Пинеге»,
    «Пинежане в годы Великой Отечественной войны», «М. Д. Кривополенова», «Пинежские сказительницы», «А. Грин на Пинеге»,
    «Пинежские приходы», «Птицы и звери наших лесов», обзорные по всем выставкам – всего более 230 за год.
    </string>

    <string name="article_museum5">
    Ежегодно музей организует мероприятия в Международный День музеев 18 мая и Ночь искусств, День памяти 30 октября,
    проводит ставшие традиционными Пинежские краеведческие чтения, активно сотрудничает с Государственным
    Дарвиновским музеем (Москва) в деле изучения историко-культурного и природного наследия Русского Севера.
    </string>

    <string name="article_zapovednik1">
    Пинежский заповедник образован с целью сохранения и изучения в естественном состоянии природного комплекса типичной
    северной тайги и уникальных карстовых ландшафтов Беломорско – Кулойского плато. Это первый заповедник в подзоне
    северной тайги на территории Восточно-Европейской равнины. Он включает участок типичных темнохвойных лесов
    подзоны северной тайги и уникальный массив лиственничников, сохранившийся на восточной окраине Беломорско-Кулойского плато.
    На заповедной территории имеются все типичные формы карстового рельефа.
    </string>

    <string name="article_zapovednik2">
    В пределах заповедника участки земли, ее недра и водное пространство навсегда изъяты из хозяйственной эксплуатации.
    Заповедник выполняет функции эталона природы северной тайги, резервата для сохранения реликтов ледниковой флоры и
    представляет из себя научно-исследовательскую базу для проведения комплексных работ по изучению природных процессов в
    лесах Европейского Севера.
    </string>

    <string name="article_zapovednik3">
    Территория заповедника освоена минимально. В заповеднике нет дорог, только пешеходные тропы. На этой территории
    никто постоянно никогда не жил, не живет в настоящее время.
    </string>

    <string name="article_zapovednik4">
    Научно-исследовательская работа на территории заповедника и прилегающих участках осуществляется силами научного
    отдела заповедника и сторонними организациями. Научные исследования направлены, главным образом, на организацию и
    проведение мониторинговых работ, выявление природного разнообразия территории заповедника, в т.ч. редких видов
    флоры и фауны и изучение состояния популяций редких видов.
    </string>

    <string name="article_zapovednik5">
    В заповеднике проведена инвентаризация лихенофлоры, бриофлоры, сосудистых растений, орнито- и териофауны и частично
    микофлоры и энтомофауны. Результаты работ опубликованы в виде научных статей и аннотированных списков.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
