<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <!-- меню для боковой панели  -->

        <group android:checkableBehavior="single">

            <item
                android:id="@+id/shops_menu"
                android:icon="@drawable/shops_icon"
                android:title="@string/shops" />
            <item
                android:id="@+id/streets_menu"
                android:icon="@drawable/streets_icon"
                android:title="@string/streets" />
            <item
                android:id="@+id/gallery_menu"
                android:icon="@drawable/gallery_icon"
                android:title="@string/gallery" />
            <item
                android:id="@+id/about_app_menu"
                android:icon="@drawable/about_app_icon"
                android:title="@string/about_app" />
        </group>


</menu>